crates/djls-python/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_admin_helpers.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.sentry.templatetags.sentry_admin_helpers::filter::with_event_counts":
    expects_arg: false
    arg_optional: false
block_specs: {}
