crates/djls-python/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_assets.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.sentry.templatetags.sentry_assets::tag::absolute_asset_url":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: module
        required: true
        kind: Variable
        position: 0
      - name: path
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "src.sentry.templatetags.sentry_assets::tag::crossorigin":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "src.sentry.templatetags.sentry_assets::tag::injected_script_assets":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
filter_arities: {}
block_specs:
  "src.sentry.templatetags.sentry_assets::tag::script":
    end_tag: endscript
    intermediates: []
    opaque: false
